# dft-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
configs/: defaults.json
dft_analyzer/: eos.py
dft_analyzer/scripts/: main.py
eos_tools/: config.py  eos.py  postprocess.py  preprocess.py
eos_tools/scripts/: main.py
tests/: conftest.py  test_postprocess.py
